--- a/Project-Gorilla/main.css
+++ b/Project-Gorilla/main.css
@@ -18,18 +18,31 @@ nav {
 	min-height: 8vh;
 	background-color: #C9082A; 
 	font-family: 'Poppins', sans-serif;
+	/*menu deroulant premier plan*/
+	position:relative;
+	z-index:10;
+}
+
+.logo {
+	color: #edffea;
+	font-size: 22px;
+	height: 10%;
+	transition: transform .2s;
 }
 
 .logo h1 {
-	color: #edffea;
-	text-transform: uppercase;
+	text-align: center;
 	letter-spacing: 5px;
-	font-size: 22px;
+}
+
+.logo :hover {
+	transform: scale(1.1);
 }
 
 .logo h3 {
 	font-family: 'Pacifico', cursive;
 }
+
 .nav-links {
 	display: flex;
 	justify-content: space-around;
@@ -59,16 +72,65 @@ nav {
 	transition: all 0.3s ease;
 }
 
+/* les nav links sont mieux espacés*/
+@media screen and (max-width: 1024px){
+	.nav-links{
+		width: 50%;
+	}
+}
+
+/*nav links mobile*/
+@media screen and (max-width: 768px){
+	body{
+		overflow-x: hidden;
+	}
+	.nav-links{
+		position: absolute;
+		right: 0px;
+		height: 92vh;
+		top: 8vh;
+		background-color: #C9082A;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 50%;
+		transform: translateX(100%);
+		transition: transform 0.5s ease-in;
+	}
+    .nav-links li{
+	opacity: 0;
+    }
+	.burger{
+	display: block;
+    }
+
+}
+
+.nav-active{
+	transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+	from{
+		opacity: 0;
+		transform: translateX(50px);
+	}
+	to{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+
 .toggle .line1 {
 	transform: rotate(-45deg) translate(-5px,6px);
-	background-color: rgb(248, 229, 166);
+	background-color: rgb(37, 76, 158);
 }
 .toggle .line2 {
 	opacity: 0;
 }
 .toggle .line3 {
 	transform: rotate(45deg) translate(-5px, -6px);
-	background-color:rgb(248, 229, 166);
+	background-color:rgb(37, 76, 158);
 }
 
 /*===========================
